--- a/hotel.html
+++ b/hotel.html
@@ -20,7 +20,7 @@
         
         function senha() {
             let senha = 2678;
-            if (senha == prompt("Qual é a senha?")){
+            if (senha == prompt("Qual é a senha?(2678)")){
                 inicio();
             } else {
                 alert("Senha incorreta!");
